--- a/charts/oai-5g-core/oai-smf/templates/deployment.yaml
+++ b/charts/oai-5g-core/oai-smf/templates/deployment.yaml
@@ -21,7 +21,7 @@ spec:
           [{
                  "name": "{{ .Chart.Name }}-n4",
                  "interface": "n4",
-                 "12:34:56:78:90:20"
+                 "mac": "12:34:56:78:90:20"
                 {{- if .Values.multus.defaultGateway }}
                  ,"default-route": ["{{ .Values.multus.defaultGateway }}"]
                 {{- end }}
