--- a/charts/oai-5g-ran/oai-gnb/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb/values.yaml
@@ -2,11 +2,11 @@ kubernetesType: Vanilla  #Vanilla for community kubernetes distribution else Ope
 
 ## In case of using these charts on Openshift then please use UBI images
 ## To know more about them follow this tutorial https://gitlab.eurecom.fr/oai/cn5g/oai-cn5g-fed/-/tree/master/openshift
+
 nfimage:   # image name either locally present or in a public/private repository
-  repository: docker.io/oaisoftwarealliance/oai-gnb
-  version: 2023.w19 # image tag or develop
-  # pullPolicy: IfNotPresent or Never or Always
-  pullPolicy: IfNotPresent
+  repository: @GNB_REPO@
+  version: @GNB_TAG@ 
+  pullPolicy: IfNotPresent # IfNotPresent or Never or Always
 
 # good to use when pulling images from docker-hub mention 
 imagePullSecrets: 
@@ -32,75 +32,70 @@ serviceAccount:
 ## NOTE: To use these charts with USRP B210 you need to modify and mount usb from the host. 
 ## Change these ip-addresses according to your environment
 
-
 multus:
   # if default gatway is empty then it will be removed
   defaultGateway: "172.21.7.254"
   n2Interface:
-    create: false
+    create: @MULTUS_GNB_N2@
     # #name inside the pod is hardcoded right now
     # name: "n2"
-    IPadd: "172.21.6.90"
-    Netmask: "22"
-    # if gatway is empty then it will be removed
-    Gateway: "172.21.7.254"
-    #routes: [{'dst': '10.8.0.0/24','gw': '172.21.7.254'}, {'dst': '10.9.0.0/24','gw': '172.21.7.254'}]
-    hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
+    IPadd: "@IP_GNB_N2@"
+    Netmask: "@NETMASK_GNB_N2@"
+    # if gateway is empty then it will be removed
+    Gateway: @GW_GNB_N2@
+    routes: @ROUTES_GNB_N2@ #[{'dst': '10.8.0.0/24','gw': '172.21.7.254'}, {'dst': '10.9.0.0/24','gw': '172.21.7.254'}]
+    hostInterface: "@IF_NAME_GNB_N2@" # Interface of the host machine on which this pod will be scheduled
   n3Interface:
-    create: false
-    IPadd: "172.21.6.91"
+    create: @MULTUS_GNB_N3@
     # #name inside the pod is hardcoded right now
     # name: "n3"
-    Netmask: "22"
-    # if gatway is empty then it will be removed
-    Gateway: "172.21.7.254"
-    #routes:
-    hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
-  ruInterface:            #Only needed if using a ethernet based RU/USRP
-    create: false
-    IPadd: "192.168.80.90"
+    IPadd: "@IP_GNB_N3@"
+    Netmask: "@NETMASK_GNB_N3@"
+    # if gateway is empty then it will be removed
+    Gateway:  @GW_GNB_N3@
+    routes: @ROUTES_GNB_N3@
+    hostInterface: "@IF_NAME_GNB_N3@" # Interface of the host machine on which this pod will be scheduled
+  ruInterface:
+    create: @MULTUS_GNB_RU@
+    IPadd: "@IP_GNB_RU@"
     # #name inside the pod is hardcoded right now
     # name: "ru"
-    Netmask: "24"
-    # if gatway is commented then it will be removed
-    Gateway: "192.168.80.1"  #In case you don't have a gateway remove it from here
-    ## The value must be [0, master's MTU]. If commented it will masters MTU
-    #mtu: 1500
-    hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
+    Netmask: "@NETMASK_GNB_RU@"
+    # if gateway is commented then it will be removed
+    Gateway: @ROUTES_GNB_RU@  #In case you don't have a gateway remove it from here
+    mtu: @MTU_GNB_RU@ 
+    hostInterface: "@IF_NAME_GNB_RU@"
 
-## If you want to change more configuration parameters then you should mount the config file  
-# in templates/configmap.yaml
-# Example config files --> https://gitlab.eurecom.fr/oai/openairinterface5g/-/tree/develop/targets/PROJECTS/GENERIC-NR-5GC/CONF 
 config:
-  mountConfig: false          #If config file is mounted then please edit mount.conf in configmap.yaml properly 
-  rfSimulator: "server"       #If you are not using in RFsimulator mode then you can leave this empty
+  mountConfig: @MOUNTCONFIG_GNB@ #If config file is mounted then please edit mount.conf in configmap.yaml properly
+  rru: "@RRU_TYPE@"
+  useAdditionalOptions: "@ADD_OPTIONS_GNB@"
+  amfIpAddress: "@AMF_IP_ADDRESS@"  # amf ip-address or service-name oai-amf-svc
+  ## NOTE: Following config parameters only useful if mountConfig is false
+  useSATddMono: true
   timeZone: "Europe/Paris"
-  ## -E is to apply three-quarter of sampling frequency, 23.04 Msps to reduce the data rate on USB/PCIe transfers (only valid for 20 MHz)
-  useAdditionalOptions: "--sa -E --rfsim --log_config.global_log_options level,nocolor,time"
-  # If mounting the configuration file then below parameters are not used
+  rfSimulator: "server"
   useSATddMono: "yes"
-  gnbName: "oai-gnb-rfsim"
-  mcc: "001"   # check the information with AMF, SMF, UPF/SPGWU
-  mnc: "01"    # check the information with AMF, SMF, UPF/SPGWU
+  gnbName: "@GNB_NAME@"
+  mcc: "@MCC@"   # check the information with AMF, SMF, UPF/SPGWU
+  mnc: "@MNC@"    # check the information with AMF, SMF, UPF/SPGWU
   mncLength: "2" # check the information with AMF, SMF, UPF/SPGWU
-  tac: "1"     # check the information with AMF
-  nssaiSst: "1"  #currently only 4 standard values are allowed 1,2,3,4 
-  nssaiSd0: "ffffff"    #values in hexa-decimal format
-  #entrypoint.sh tries to resolve the amfHost name if the resolution did not work gNB will not start
-  amfIpAddress: "oai-amf-svc"  # amf ip-address or service-name oai-amf-svc or 172.21.6.94
-  gnbNgaIfName: "eth0"            # if multus.n2Interface.create is true then use n2 
-  gnbNgaIpAddress: "status.podIP" # if multus.n2Interface.create is true then use multus.n2Interface.Ipadd 
-  gnbNguIfName: "eth0"   #if multus.n3Interface.create is true then use n3 or you can only use 1 interface n2 or eth0 
-  gnbNguIpAddress: "status.podIP" # if multus.n3Interface.create is true then use multus.n3Interface.Ipadd or multus.n2Interface.Ipadd if you are using only 1 extra interface
+  tac: "@TAC@"     # check the information with AMF
+  nssaiSst: "@SST@"  #currently only 4 standard values are allowed 1,2,3,4 
+  nssaiSd0: "0xffffff"    #values in hexa-decimal format
+  gnbNgaIfName: "@GNB_NGA_IF_NAME@" # net1 in case multus create is true that means another interface is created for ngap interface, n2 to communicate with amf
+  gnbNgaIpAddress: "@IP_GNB_N2N3@" # "status.podIP" or n2n3IPadd in case multus is used
+  gnbNguIfName: "@GNB_NGU_IF_NAME@"   #net1 in case multus create is true gtu interface for upf/spgwu
+  gnbNguIpAddress: "@IP_GNB_N2N3@" # "status.podIP" or n2n3IPadd in case multus is used
   threadParallelConfig: "PARALLEL_SINGLE_THREAD"
-  sdrAddrs: "serial=XXXXXXX"
+  sdrAddrs: "serial=XXXXXXX" 
 
 ## Debugging section
 start:
-  gnb: true #If false the network function container will run in sleep mode for manually testing
-  tcpdump: false
+  gnb: true  #If false the network function container will run in sleep mode for manually testing
+  tcpdump: @TCPDUMP_GNB_START@
 
-includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
+includeTcpDumpContainer: @TCPDUMP_CONTAINER_GNB_CREATE@ #If true it will add a tcpdump container inside network function pod for debugging
 
 podSecurityContext:
   runAsUser: 0
@@ -108,39 +103,44 @@ podSecurityContext:
 
 ## For openshift you can use rhel8/support-tools:8.7-13
 tcpdumpimage:
-   repository: docker.io/corfr/tcpdump
-   version: latest
-   #pullPolicy: IfNotPresent or Never or Always
-   pullPolicy: IfNotPresent
+  repository: docker.io/corfr/tcpdump
+  version: latest
+  pullPolicy: IfNotPresent # IfNotPresent or Never or Always
+
+
+persistent:
+  sharedvolume: @GNB_SHARED_VOL@
+  volumeName: oai5g-volume
+  size: 1Gi
 
 ## NF is the network function and tcpdump is the tcpdump container. 
 ## To know more about request and limit it is better to understand that how Kubernetes QoS works. 
 ## https://kubernetes.io/docs/concepts/configuration/manage-resources-containers
 ## https://kubernetes.io/docs/concepts/workloads/pods/pod-qos
 resources:
-  define: false
+  define: @QOS_GNB_DEF@
   limits:
     nf:
-      cpu: 2000m
-      memory: 2Gi
-    #If tcpdump container is disabled this value will not be used
+      cpu: 8
+      memory: 3500M
     tcpdump:
-      cpu: 200m
-      memory: 128Mi
+      cpu: 8
+      memory: 3500M
   requests:
     nf:
-      cpu: 2000m
-      memory: 2Gi
-    #If tcpdump container is disabled this value will not be used
+      cpu: 8
+      memory: 3500M
     tcpdump:
-      cpu: 100m
-      memory: 128Mi
+      cpu: 8
+      memory: 3500M
+
 
 tolerations: []
+
 affinity: {}
 
 terminationGracePeriodSeconds: 5
 
 nodeSelector: {}
 
-nodeName: 
+nodeName: @NODE_GNB@
