oai-gnb/nr-ue charts moved in this repo

--- a/charts/oai-5g-ran/oai-gnb/templates/deployment.yaml
+++ b/charts/oai-5g-ran/oai-gnb/templates/deployment.yaml
@@ -16,23 +16,48 @@ spec:
       labels:
         {{- include "oai-gnb.selectorLabels" . | nindent 8 }}
         app: oai-gnb
-    {{- if .Values.multus.n2n3Interface.create }}
+    {{- if .Values.multus.n2Interface.create }}
       annotations:
         k8s.v1.cni.cncf.io/networks: >-
           [{
-                 "name": "{{ .Chart.Name }}-net1",
-                 "mac": "12:34:56:78:90:11"
+                 "name": "{{ .Chart.Name }}-n2",
+                 "interface": "n2",
+                 "mac": "12:34:56:78:90:51"
+                {{- if .Values.multus.defaultGateway }}
+                 ,"default-route": ["{{ .Values.multus.defaultGateway }}"]
+                {{- end }}
+                {{- if .Values.multus.n2Interface.Gateway }}
+                 ,"gateway": ["{{ .Values.multus.n2Interface.Gateway }}"]
+                {{- end }}
           }
+          {{- if .Values.multus.n3Interface.create }}
+          ,{
+                 "name": "{{ .Chart.Name }}-n3",
+                 "interface": "n3",
+                 "mac": "12:34:56:78:90:52"
+                {{- if .Values.multus.n3Interface.Gateway }}
+                 ,"gateway": ["{{ .Values.multus.n3Interface.Gateway }}"]
+                {{- end }}
+          }
+          {{- end }}
           {{- if .Values.multus.ru1Interface.create }}
           ,{
-                 "name": "{{ .Chart.Name }}-net2",
-                 "mac": "12:34:56:78:90:12"
+                 "name": "{{ .Chart.Name }}-ru1",
+                 "interface": "ru1",
+                 "mac": "12:34:56:78:90:53"
+                {{- if .Values.multus.ru1Interface.Gateway }}
+                 ,"gateway": ["{{ .Values.multus.ru1Interface.Gateway }}"]
+                {{- end }}
           }
           {{- end }}
           {{- if .Values.multus.ru2Interface.create }}
           ,{
-                 "name": "{{ .Chart.Name }}-net3",
-                 "mac": "12:34:56:78:90:13"
+                 "name": "{{ .Chart.Name }}-ru2",
+                 "interface": "ru2",
+                 "mac": "12:34:56:78:90:54"
+                {{- if .Values.multus.ru2Interface.Gateway }}
+                 ,"gateway": ["{{ .Values.multus.ru2Interface.Gateway }}"]
+                {{- end }}
           }
           {{- end }}
           ]
