--- a/charts/oai-5g-ran/oai-nr-ue/values.yaml
+++ b/charts/oai-5g-ran/oai-nr-ue/values.yaml
@@ -25,6 +25,7 @@ multus:
   create: @MULTUS_NRUE@
   ipadd: "@IP_NRUE@"  # interface needed to connect with gnb
   netmask: "@NETMASK_NRUE@"
+  mac: "@MAC_NRUE@"
   defaultGateway: @DEFAULT_GW_NRUE@
   hostInterface: "@IF_NAME_NRUE@"
 
