--- a/charts/oai-5g-core/oai-amf/templates/deployment.yaml
+++ b/charts/oai-5g-core/oai-amf/templates/deployment.yaml
@@ -21,7 +21,9 @@ spec:
           [{
                  "name": "{{ .Chart.Name }}-n2",
                  "interface": "n2",
-                "mac": "12:34:56:78:90:00"
+                {{- if .Values.multus.n2Interface.Mac }}
+                 "mac":  "{{ .Values.multus.n2Interface.Mac }}"
+                {{- end }}
                 {{- if .Values.multus.defaultGateway }}
                  ,"default-route": ["{{ .Values.multus.defaultGateway }}"]
                 {{- end }}
