--- a/charts/oai-5g-core/oai-smf/values.yaml
+++ b/charts/oai-5g-core/oai-smf/values.yaml
@@ -40,6 +40,8 @@ multus:
     create: false
     Ipadd: "172.21.6.202"
     Netmask: "22"
+    ## If you do not need a specific mac address leave the field empty
+    Mac:
     ## If you do not have a gateway leave the field empty
     Gateway: "172.21.7.254"
     ## If you do not want to add any routes in your pod then leave this field empty
