--- a/charts/oai-5g-core/oai-spgwu-tiny/values.yaml
+++ b/charts/oai-5g-core/oai-spgwu-tiny/values.yaml
@@ -39,6 +39,8 @@ multus:
     create: false
     Ipadd: "172.21.6.95"
     Netmask: "22"
+    ## If you do not need a specific mac address leave the field empty
+    Mac:
     ## If you do not have a gateway leave the field empty
     Gateway: "172.21.7.254"
     ## If you do not want to add any routes in your pod then leave this field empty
@@ -48,6 +50,8 @@ multus:
     create: false
     Ipadd: "172.21.16.89"
     Netmask: "22"
+    ## If you do not need a specific mac address leave the field empty
+    Mac:
     ## If you do not have a gateway leave the field empty
     Gateway: "172.21.19.254"
     ## If you do not want to add any routes in your pod then leave this field empty
@@ -57,6 +61,8 @@ multus:
     create: false
     Ipadd: "172.21.8.80"
     Netmask: "22"
+    ## If you do not need a specific mac address leave the field empty
+    Mac:
     ## If you do not have a gateway leave the field empty
     Gateway: "172.21.11.254"
     ## If you do not want to add any routes in your pod then leave this field empty
