--- a/charts/oai-5g-ran/oai-nr-ue/templates/deployment.yaml
+++ b/charts/oai-5g-ran/oai-nr-ue/templates/deployment.yaml
@@ -21,7 +21,9 @@ spec:
         k8s.v1.cni.cncf.io/networks: >-
           [{
                  "name": "{{ .Chart.Name }}-net1",
-                 "mac": "12:34:56:78:90:40"
+                {{- if .Values.multus.mac }}
+                 "mac":  "{{ .Values.multus.mac }}"
+                {{- end }}
                  {{- if .Values.multus.defaultGateway}}
                  , "default-route": ["{{ .Values.multus.defaultGateway }}"]
                  {{- end}}
