Update Parameters in AMF conf file

--- a/charts/oai-5g-core/oai-5g-slicing/values.yaml
+++ b/charts/oai-5g-core/oai-5g-slicing/values.yaml
@@ -110,7 +110,7 @@ oai-amf:
     amfInterfaceNameForNGAP: "eth0" # If oai-amf.multus.n2Interface.create is true then n2 else eth0
     amfInterfaceNameForSBI: "eth0"  # Service based interface
     externalAusf: "yes"
-    externalNssf: "yes"
+    enableNssf: "yes"
     nrfSelection: "yes"
     nfRegistration: "yes"
     smfSelection: "no"
