--- a/docker-compose/conf/oai-amf.conf
+++ b/docker-compose/conf/oai-amf.conf
@@ -110,7 +110,7 @@ AMF =
      NRF_SELECTION   = "no";   # Set to yes to enable NRF discovery and selection
      SMF_SELECTION   = "no";   # Set to yes to enable SMF discovery and selection
      EXTERNAL_NRF    = "no";   # Set to yes if AMF works with an external NRF
-     EXTERNAL_NSSF   = "no";
+     ENABLE_NSSF   = "no";
      EXTERNAL_AUSF   = "yes";  # Set to yes if AMF works with an external AUSF
      EXTERNAL_UDM    = "no";   # Set to yes if AMF works with an external UDM
      USE_FQDN_DNS    = "no";   # Set to yes if AMF relies on a DNS to resolve NRF/SMF/UDM/AUSF's FQDN
