--- a/charts/oai-5g-core/oai-amf/values.yaml
+++ b/charts/oai-5g-core/oai-amf/values.yaml
@@ -74,7 +74,7 @@ config:
   externalAusf: "yes"         #Ausf will be used instead of using internal AUSF for mini deployment
   externalUdm: "no"
   externalNrf: "no"
-  externalNssf: "no"
+  enableNssf: "no"
   useHttp2: "no"
   intAlgoList: '[ "NIA1" , "NIA1" , "NIA2" ]'
   ciphAlgoList: '[ "NEA0" , "NEA1" , "NEA2" ]'
