--- a/docker-compose/policies/redirection/pcc_rules/pcc_rules.yaml
+++ b/docker-compose/policies/redirection/pcc_rules/pcc_rules.yaml
@@ -1,6 +1,6 @@
 redirection-rule:
   flowInfos:
-    - flowDescription: permit out ip from 8.8.8.8 to assigned
+    - flowDescription: permit out ip from any to assigned
   precedence: 10
   refTcData:
     - redirection-scenario
